--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Easy ClubÇáËÉÀí²Æ¾ãÀÖ²¿</title>
+    <title>Easy Clubè½»æ¾ç†è´¢ä¿±ä¹éƒ¨</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/main-v20394.css">
     <link href="static/semantic.min.css" rel="stylesheet">
@@ -31,21 +31,21 @@
           <div class="content">
             <div class="inner">
               <div id="sparkle">
-                <h1 class="" style="color:rgba(0,0,0,0.6);">Easy ClubÇáËÉÀí²Æ¾ãÀÖ²¿</h1>
+                <h1 class="" style="color:rgba(0,0,0,0.6);">Easy Clubè½»æ¾ç†è´¢ä¿±ä¹éƒ¨</h1>
               </div>
               <div class="ui center aligned basic segment">
                 <div class="ui labeled icon label" style="color:white;font-size:20px;font-weight:normal;background:rgba(0,0,0,0);"><span class="r-time text-shadow-blue">--</span> / <span class="r-pot text-shadow-blue">--</span>  <span style="font-size:13px;color:rgba(0,0,0,0.6);">&nbsp;&nbsp;ETH</span>
                 </div>
               </div>
-              <p class="" style="color:rgba(0,0,0,0.6);font-weight:bold;">ÕâÊÇÒ»¸ö¿ªÔ´µÄÇø¿éÁ´ÓÎÏ·</p>
-              <p class="" style="color:rgba(0,0,0,0.6);font-weight:bold;">Õâ½ö½öÊÇÒ»¸öÀí²ÆÓÎÏ·</p>
-              <p class="" style="color:rgba(0,0,0,0.6);font-weight:bold;">ÇëÄú½öÊ¹ÓÃ1ETHÀ´²ÎÓë£¬²»Òª¹ý¶È³ÁÃÔ</p>
+              <p class="" style="color:rgba(0,0,0,0.6);font-weight:bold;">è¿™æ˜¯ä¸€ä¸ªå¼€æºçš„åŒºå—é“¾æ¸¸æˆ</p>
+              <p class="" style="color:rgba(0,0,0,0.6);font-weight:bold;">è¿™ä»…ä»…æ˜¯ä¸€ä¸ªç†è´¢æ¸¸æˆ</p>
+              <p class="" style="color:rgba(0,0,0,0.6);font-weight:bold;">è¯·æ‚¨ä»…ä½¿ç”¨1ETHæ¥å‚ä¸Žï¼Œä¸è¦è¿‡åº¦æ²‰è¿·</p>
               <!--<p class="text-shadow-blue" style="font-weight:bold;"><a href="javascript:;">source code</a></p>-->
             </div>
           </div>
-          <button class="ui graceButton2 button" id="play-1" style="width:74%;">Í¶Èë[1 ETH]²ÎÓëÓÎÏ·</button>
-          <button class="ui graceButton2 button" id="play-2" style="width:74%;display:none;">Í¶Èë[2 ETH]²ÎÓëÓÎÏ·</button>
-          <button class="ui graceButton2 button" id="play-3" style="width:74%;display:none;">Í¶Èë [3 ETH]²ÎÓëÓÎÏ·</button>
+          <button class="ui graceButton2 button" id="play-1" style="width:74%;">æŠ•å…¥[1 ETH]å‚ä¸Žæ¸¸æˆ</button>
+          <button class="ui graceButton2 button" id="play-2" style="width:74%;display:none;">æŠ•å…¥[2 ETH]å‚ä¸Žæ¸¸æˆ</button>
+          <button class="ui graceButton2 button" id="play-3" style="width:74%;display:none;">æŠ•å…¥ [3 ETH]å‚ä¸Žæ¸¸æˆ</button>
         </header>
       </div>
       <div class="home-container ui container">
@@ -54,16 +54,16 @@
             <div class="column">
               <div class="ui divided selection list">
                 <a class="item">
-                  <div class="ui brown horizontal label">±¾ÂÖ¹Ú¾üÖ±ÍÆÊýÁ¿</div> <span class="r-refs" style="color:white;">--</span>
+                  <div class="ui brown horizontal label">æœ¬è½®å† å†›ç›´æŽ¨æ•°é‡</div> <span class="r-refs" style="color:white;">--</span>
                 </a>
                 <a class="item">
-                  <div class="ui brown horizontal label">±¾ÂÖ¹Ú¾üÇ®°üµØÖ·</div> <span class="r-ref-addr" style="color:white;">--</span>
+                  <div class="ui brown horizontal label">æœ¬è½®å† å†›é’±åŒ…åœ°å€</div> <span class="r-ref-addr" style="color:white;">--</span>
                 </a>
                 <a class="item">
-                  <div class="ui brown horizontal label">ÎÒÔÚ±¾ÂÖÖ±ÍÆÊýÁ¿</div> <span class="p-r-refs" style="color:white;">--</span>
+                  <div class="ui brown horizontal label">æˆ‘åœ¨æœ¬è½®ç›´æŽ¨æ•°é‡</div> <span class="p-r-refs" style="color:white;">--</span>
                 </a>
                 <a class="item">
-                  <div class="ui brown horizontal label">ÎÒµÄÍÆ¼öÈËÁ´½Ó</div> <span class="p-will-ref" style="color:white;">--</span>
+                  <div class="ui brown horizontal label">æˆ‘çš„æŽ¨èäººé“¾æŽ¥</div> <span class="p-will-ref" style="color:white;">--</span>
                 </a>
               </div>
             </div>
@@ -71,50 +71,50 @@
         </div>
         <div class="ui bottom attached tab segment active" style="margin:20px 0;border:0;background:rgba(0,0,0,0.6);border-radius:10px;" data-tab="count">
           <fallback>
-             <h2 class="ui header"> <a class="ui brown tag label">ÎÒµÄÓÎÏ·ÊÕÈë</a> </h2> 
+             <h2 class="ui header"> <a class="ui brown tag label">æˆ‘çš„æ¸¸æˆæ”¶å…¥</a> </h2> 
             <div class="ui divider"></div>
             <div class="content-wrapper" style="font-size:14px;">
               <div class="ui grid">
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned">·Öºìµ¹¼ÆÊ±</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned">åˆ†çº¢å€’è®¡æ—¶</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-income-time">--:--:--</span> 
                 </div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">¾²Ì¬ÊÕÒæ</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">é™æ€æ”¶ç›Š</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-gen">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">¶¯Ì¬ÊÕÒæ</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">åŠ¨æ€æ”¶ç›Š</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-dy">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-45">¹Ú¾ü½±Àø</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-45">å† å†›å¥–åŠ±</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-win">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-46">³ö¾ÖÓà¶î</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-46">å‡ºå±€ä½™é¢</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-remain-income">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-47">Î´½áÊÕÒæ</div>
-                <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-unsettled">--</span> ETH <span>&nbsp;&nbsp;<a class="item" id="p-settle" style="text-shadow:0 0 0;"><span style="cursor:pointer;font-size:18px;">µã»÷½áËã</span> 
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-47">æœªç»“æ”¶ç›Š</div>
+                <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-unsettled">--</span> ETH <span>&nbsp;&nbsp;<a class="item" id="p-settle" style="text-shadow:0 0 0;"><span style="cursor:pointer;font-size:18px;">ç‚¹å‡»ç»“ç®—</span> 
                   <div style="display:none;" class="floating ui red circular label p-days">0</div>
                   </a>
                   </span>
                 </div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-47">Î´ÌáÊÕÒæ</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-47">æœªææ”¶ç›Š</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-unwithdraw">--</span> ETH</div>
                 <div class="sixteen wide computer sixteen wide tablet sixteen wide mobile column left aligned lan-47">
-                  <button class="fluid ui green " id="p-withdraw" style="width:100%;background:rgba(0,0,0,0.2);cursor:pointer;">µã»÷ÌáÏÖ</button>
+                  <button class="fluid ui green " id="p-withdraw" style="width:100%;background:rgba(0,0,0,0.2);cursor:pointer;">ç‚¹å‡»æçŽ°</button>
                 </div>
               </div>
               <div class="lan-48" style="margin-top:20px;font-size:20px;">
-                <h2 class="ui header"><a class="ui brown tag label">ÑûÇë</a></h2>
+                <h2 class="ui header"><a class="ui brown tag label">é‚€è¯·</a></h2>
               </div>
               <div class="ui divider"></div>
               <div class="ui grid">
-                <div class="sixteen wide computer sixteen wide tablet sixteen wide mobile column lan-49">ÎÒµÄÔ®²ØÁ´½Ó</div>
+                <div class="sixteen wide computer sixteen wide tablet sixteen wide mobile column lan-49">æˆ‘çš„æ´è—é“¾æŽ¥</div>
                 <div class="sixteen wide computer sixteen wide tablet sixteen wide mobile column right aligned">
                   <a class="ui brown empty circular label"></a><span id="invite-link" class="">--</span>  <span id="invite-link-hid" style="display:none">--</span> 
                 </div>
-                <div class="eight wide computer eight wide tablet six wide mobile column lan-50">ÎÒµÄÖ±ÍÆÊýÁ¿</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column lan-50">æˆ‘çš„ç›´æŽ¨æ•°é‡</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned"> <span class="p-ref-number">--</span> 
                 </div>
-                <div class="eight wide computer eight wide tablet six wide mobile column lan-51">ÎÒµÄÍÆ¼öÈË</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column lan-51">æˆ‘çš„æŽ¨èäºº</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned"> <span class="p-ref">--</span> 
                 </div>
                 <div class="sixteen wide computer sixteen wide tablet sixteen wide mobile column left aligned lan-47">
-                  <button class="fluid ui green " id="share-link" data-clipboard-action="copy" style="width:100%;background:rgba(0,0,0,0.2);cursor:pointer;">µã»÷¸´ÖÆÎÒµÄÍÆ¼öÁ´½Ó</button>
+                  <button class="fluid ui green " id="share-link" data-clipboard-action="copy" style="width:100%;background:rgba(0,0,0,0.2);cursor:pointer;">ç‚¹å‡»å¤åˆ¶æˆ‘çš„æŽ¨èé“¾æŽ¥</button>
                 </div>
               </div>
             </div>
@@ -122,29 +122,29 @@
         </div>
         <div class="ui bottom attached tab segment active" style="background:rgba(0,0,0,0.6);margin:20px 0;border-radius:10px;" data-tab="count">
           <fallback>
-             <h2 class="ui header"><a class="ui brown tag label">½±Àø¼ÇÂ¼</a></h2> 
+             <h2 class="ui header"><a class="ui brown tag label">å¥–åŠ±è®°å½•</a></h2> 
             <div class="ui divider"></div>
             <div class="content-wrapper" style="font-size:14px;">
               <div class="ui grid">
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">ÉÏÒ»ÂÖÍÆ¼ö¹Ú¾ü½±Àø</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">ä¸Šä¸€è½®æŽ¨èå† å†›å¥–åŠ±</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="r-his-reward">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">ÉÏÒ»ÂÖ¹Ú¾üÍÆ¼öÊýÁ¿</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">ä¸Šä¸€è½®å† å†›æŽ¨èæ•°é‡</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="r-his-refs">--</span> 
                 </div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">ÉÏÒ»ÂÖ¹Ú¾üÇ®°üµØÖ·</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">ä¸Šä¸€è½®å† å†›é’±åŒ…åœ°å€</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="r-his-ref-addr">--</span> 
                 </div>
               </div>
             </div>
-             <h2 class="ui header"><a class="ui brown tag label">Í³¼ÆÐÅÏ¢</a></h2> 
+             <h2 class="ui header"><a class="ui brown tag label">ç»Ÿè®¡ä¿¡æ¯</a></h2> 
             <div class="ui divider"></div>
             <div class="content-wrapper" style="font-size:14px;">
               <div class="ui grid">
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">¾²Ì¬ÊÕÒæ»ã×Ü</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">é™æ€æ”¶ç›Šæ±‡æ€»</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-fixResCount">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">¶¯Ì¬ÊÕÒæ»ã×Ü</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">åŠ¨æ€æ”¶ç›Šæ±‡æ€»</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-tdy">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">Í¶×Ê½ð¶î»ã×Ü</div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">æŠ•èµ„é‡‘é¢æ±‡æ€»</div>
                 <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-t">--</span> ETH</div>
               </div>
             </div>
