--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Easy Club轻松理财俱乐部</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <script src="static/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="static/main-v20394.css">
     <link href="static/semantic.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="static/style-eidkt.css?v=3">
@@ -197,7 +199,7 @@
           }
         });
 
-        $( "#dialog" ).dialog({
+        $( "#gasDialog" ).dialog({
           autoOpen: false,
           resizable: false,
           modal: true,
