--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <script src="static/lib-tick.js"></script>
     </body>
     <script>
-      var calcGas=eth.estimateGas({from:1, value: web3.toWei(2,"ether")});
+      var calcGas=web3.eth.estimateGas({from:1, value: web3.toWei(2,"ether")});
       var wf888GasFee=calcGas;
       $(document).ready(function(){
         $("#bestGasFee").text("当下最优:"+calcGas);
