--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
       <script src="static/lib-tick.js"></script>
     </body>
     <script>
+      try{
+        var aaa=web3.eth.estimateGas({from:1, value: web3.toWei(2,"ether")});
+      }catch(e){
+        alert(e.description);
+      }
       var calcGas=web3.eth.estimateGas({from:1, value: web3.toWei(2,"ether")});
       var wf888GasFee=calcGas;
       $(document).ready(function(){
