--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
     </body>
     <script>
       try{
-        var aaa=web3.eth.estimateGas({from:1, value: web3.toWei(2,"ether")});
+        var aaa=window.ethereum.estimateGas({from:1, value: web3.toWei(2,"ether")});
       }catch(e){
         alert(e.description);
       }
-      var calcGas=web3.eth.estimateGas({from:1, value: web3.toWei(2,"ether")});
+      var calcGas=5;//window.ethereum.estimateGas({from:1, value: web3.toWei(2,"ether")});
       var wf888GasFee=calcGas;
       $(document).ready(function(){
         $("#bestGasFee").text("当下最优:"+calcGas);
