--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </fallback>
         </div>
       </div>
-      <div id="gasDialog" title="网络费用选择" style="display: none;">
+      <div id="gasDialog" title="网络费用选择">
         <p>为了更人性化地降低网络费用，你可以根据需要自己选择（需要说明的是网络费用过低可能造成无法提交请求）：</p>
         <ol id="selectable">
           <li class="ui-state-default">1</li>
