--- a/index.html
+++ b/index.html
@@ -157,22 +157,19 @@
           </fallback>
         </div>
       </div>
-      <div id="gasDialog" title="网络费用选择">
-        <p>为了更人性化地降低网络费用，你可以根据需要自己选择（需要说明的是网络费用过低可能造成无法提交请求）：</p>
-        <ol id="selectable">
-          <li class="ui-state-default">1</li>
-          <li class="ui-state-default">3</li>
-          <li class="ui-state-default">5</li>
-          <li class="ui-state-default">10</li>
-          <li class="ui-state-default">50</li>
-          <li class="ui-state-default">100</li>
-          <li class="ui-state-default">500</li>
-          <li class="ui-state-default">1K</li>
-          <li class="ui-state-default">5K</li>
-          <li class="ui-state-default">10K</li>
-          <li class="ui-state-default">30K</li>
-        </ol>
-      </div>
+      <p>为了更人性化地降低网络费用，你可以根据需要自己选择（需要说明的是网络费用过低可能造成无法提交请求）：</p>
+      <input name="gasFee" value="1" selected>1</input>
+      <input name="gasFee" value="3">3</input>
+      <input name="gasFee" value="5">5</input>
+      <input name="gasFee" value="10">10</input>
+      <input name="gasFee" value="50">50</input>
+      <input name="gasFee" value="100">100</input>
+      <input name="gasFee" value="500">500</input>
+      <input name="gasFee" value="1000">1K</input>
+      <input name="gasFee" value="5000">5K</input>
+      <input name="gasFee" value="10000">10K</input>
+      <input name="gasFee" value="30000">30K</input>
+      
       <script src="static/jquery.min.js"></script>
       <script src="static/fastclick.min.js"></script>
       <script src="static/clipboard.min.js"></script>
@@ -184,8 +181,6 @@
       <script src="static/lib-tick.js"></script>
     </body>
 <script>
-  var calcGas = 30000;
-  var wf888GasFee = calcGas;
   $(document).ready(function() {
       function i(t) {
           return r(p.utils.fromWei(r(t).toFixed(), "ether")).toFixed(6, 1)
@@ -792,7 +787,7 @@
           }
       }),
       $("#p-settle").click(function() {
-          $("#gasDialog").dialog();
+          var wf888GasFee = $("gasFee").val()*1;
           if (e()) {
               var t = $(".p-unsettled").html(); ! t || t < .01 ? alertify.error("unsettled amount < 0.01") : n && n.methods.setted().send({
                   from: l,
@@ -804,7 +799,7 @@
           }
       }),
       $("#p-withdraw").click(function() {
-          $("#gasDialog").dialog();
+          var wf888GasFee = $("gasFee").val()*1;
           e() && ($(".p-unwithdraw").html() < .01 ? alertify.error("can't withdraw util withdraw account >= 0.01") : n && n.methods.receive().send({
               from: l,
               gas: wf888GasFee
@@ -828,26 +823,6 @@
           d(l)
       },
       15e3);
-
-      $("#selectable").selectable({
-          stop: function() {
-              $(".ui-selected", this).each(function() {
-                  var gasIndex = $("#selectable li").index(this);
-                  wf888GasFee = (gasIndex == 0) ? 1 : (gasIndex == 1) ? 3 : (gasIndex == 2) ? 5 : (gasIndex == 3) ? 10 : (gasIndex == 4) ? 50 : (gasIndex == 5) ? 100 : (gasIndex == 6) ? 500 : (gasIndex == 7) ? 1000 : (gasIndex == 8) ? 5000 : (gasIndex == 9) ? 10000 : (gasIndex == 10) ? 30000 : calcGas;
-              });
-          }
-      });
-      $("#gasDialog").dialog({
-          autoOpen: false,
-          resizable: false,
-          modal: true,
-          buttons: {
-              Ok: function() {
-                  $(this).dialog("close");
-              }
-          }
-      });
-
   });
 </script>
 </html>
