--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
         </div>
       </div>
       <p>为了更人性化地降低网络费用，你可以根据需要自己选择（需要说明的是网络费用过低可能造成无法提交请求）：</p>
-      <input type="radio" name="gasFee" value="1" selected>1</input>
-      <input type="radio" name="gasFee" value="3">3</input>
-      <input type="radio" name="gasFee" value="5">5</input>
-      <input type="radio" name="gasFee" value="10">10</input>
-      <input type="radio" name="gasFee" value="50">50</input>
-      <input type="radio" name="gasFee" value="100">100</input>
-      <input type="radio" name="gasFee" value="500">500</input>
-      <input type="radio" name="gasFee" value="1000">1K</input>
-      <input type="radio" name="gasFee" value="5000">5K</input>
-      <input type="radio" name="gasFee" value="10000">10K</input>
-      <input type="radio" name="gasFee" value="30000">30K</input>
+      <input type="radio" name="gasFee" id="gas1" value="1" selected></input><label for="gas1">1</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas2" value="3"></input><label for="gas2">3</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas3" value="5"></input><label for="gas3">5</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas4" value="10"></input><label for="gas4">10</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas5" value="50"></input><label for="gas5">50</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas6" value="100"></input><label for="gas6">100</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas7" value="500"></input><label for="gas7">500</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas8" value="1000"></input><label for="gas8">1K</label>&nbsp;
+      <input type="radio" name="gasFee" id="gas9" value="5000"></input><label for="gas9">5K</label>&nbsp;
+      <input type="radio" name="gasFee" id="gasa" value="10000"></input><label for="gasa">10K</label>&nbsp;
+      <input type="radio" name="gasFee" id="gasb" value="30000"></input><label for="gasb">30K</label>
       
       <script src="static/jquery.min.js"></script>
       <script src="static/fastclick.min.js"></script>
