--- a/index.html
+++ b/index.html
@@ -159,35 +159,23 @@
 
         <div class="ui bottom attached tab segment active" style="background:rgba(0,0,0,0.6);margin:20px 0;border-radius:10px;" data-tab="count">
           <fallback>
-             <h2 class="ui header"><a class="ui brown tag label">网络费用定义</a></h2> 
+            <h2 class="ui header"><a class="ui brown tag label">网络费用定义</a></h2> 
             <div class="ui divider"></div>
             <div class="content-wrapper" style="font-size:14px;">
               <p>为了更人性化地降低网络费用，你可以根据需要自己选择（需要说明的是网络费用过低可能造成无法提交请求）：</p>
               <div class="ui grid">
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43"><input type="radio" name="gasFee" id="gas1" value="1" checked></input><label for="gas1">1gas，费用最低，速度最慢</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43"><input type="radio" name="gasFee" id="gas2" value="3"></input><label for="gas2">3gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas3" value="5"></input><label for="gas3">5gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas4" value="10"></input><label for="gas4">10gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas5" value="50"></input><label for="gas5">50gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas6" value="100"></input><label for="gas6">100gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas7" value="500"></input><label for="gas7">500gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas8" value="1000"></input><label for="gas8">1000gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas9" value="5000"></input><label for="gas9">5000gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasa" value="10000"></input><label for="gasa">10000gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasb" value="30000"></input><label for="gasb">20000gas，提现推荐费用</label></div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas1" value="1" checked></input><label for="gas1">1gas，费用最低，速度最慢</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43"><input type="radio" name="gasFee" id="gas2" value="3"></input><label for="gas2">3gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas3" value="5"></input><label for="gas3">5gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas4" value="10"></input><label for="gas4">10gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas5" value="50"></input><label for="gas5">50gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas6" value="100"></input><label for="gas6">100gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas7" value="500"></input><label for="gas7">500gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas8" value="1000"></input><label for="gas8">1000gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas9" value="5000"></input><label for="gas9">5000gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasa" value="10000"></input><label for="gasa">10000gas</label></div><br>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasb" value="30000"></input><label for="gasb">20000gas，提现推荐费用</label></div><br>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasb" value="30000"></input><label for="gasb">30000gas，结算推荐费用</label></div>
-              </div>
-            </div>
-             <h2 class="ui header"><a class="ui brown tag label">统计信息</a></h2> 
-            <div class="ui divider"></div>
-            <div class="content-wrapper" style="font-size:14px;">
-              <div class="ui grid">
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43">静态收益汇总</div>
-                <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-fixResCount">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">动态收益汇总</div>
-                <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-tdy">--</span> ETH</div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44">投资金额汇总</div>
-                <div class="eight wide computer eight wide tablet ten wide mobile column right aligned gracefulText"> <span class="p-t">--</span> ETH</div>
               </div>
             </div>
           </fallback>
