--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="content-wrapper" style="font-size:14px;">
               <p>为了更人性化地降低网络费用，你可以根据需要自己选择（需要说明的是网络费用过低可能造成无法提交请求）：</p>
               <div class="ui grid">
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas1" value="1" checked></input><label for="gas1">1gas,最低</label></div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas1" value="1"></input><label for="gas1">1gas,最低</label></div>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-43"><input type="radio" name="gasFee" id="gas2" value="3"></input><label for="gas2">3gas</label></div>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas3" value="5"></input><label for="gas3">5gas</label></div>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas4" value="10"></input><label for="gas4">10gas</label></div>
@@ -173,8 +173,8 @@
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas7" value="500"></input><label for="gas7">500gas</label></div>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas8" value="1000"></input><label for="gas8">1000gas</label></div>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gas9" value="5000"></input><label for="gas9">5000gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasa" value="10000"></input><label for="gasa">10000gas</label></div>
-                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasb" value="30000"></input><label for="gasb">2k,提现</label></div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasa" value="10000" checked></input><label for="gasa">10000gas</label></div>
+                <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasb" value="20000"></input><label for="gasb">2k,提现</label></div>
                 <div class="eight wide computer eight wide tablet six wide mobile column left aligned lan-44"><input type="radio" name="gasFee" id="gasb" value="30000"></input><label for="gasb">3k,结算</label></div>
               </div>
             </div>
@@ -741,10 +741,12 @@
           alertify.success("copy success. " + t.text)
       });
       function M(t) {
+        //5e5
+        var wf888GasFee = $("input[name='gasFee']:checked").val()*1;
           y ? n.methods.play(y).send({
               from: l,
               value: t,
-              gas: 5e5
+              gas: wf888GasFee
           },
           function(t, e) {
               t && alertify.error(t.message)
